fixed the scrollable container some

--- a/src/app/components/create-referral/create-referral.component.html
+++ b/src/app/components/create-referral/create-referral.component.html
@@ -25,7 +25,7 @@
 
         <!-- Add Patient general information -->
         <mat-step label="Supporting Information" [completed]='isStepCompleted(3)'>
-          <div class="scrollable-container">
+          <div>
             <app-request-supporting-information></app-request-supporting-information>
           </div>
 
