--- a/src/app/components/request-supporting-information/request-supporting-information.component.html
+++ b/src/app/components/request-supporting-information/request-supporting-information.component.html
@@ -67,7 +67,7 @@
 
     <div class="row" style="margin-top: 1em">
       <mat-form-field appearance="outline" class="col">
-        <mat-label>Medical History</mat-label>
+        <mat-label>Medication History</mat-label>
         <textarea matInput type='text' formControlName="medicalHistory" rows="10"></textarea>
       </mat-form-field>
     </div>
