--- a/src/app/components/service-provider-list/service-provider-list.component.html
+++ b/src/app/components/service-provider-list/service-provider-list.component.html
@@ -10,12 +10,13 @@
 </div>
 
 <div align="end" style="margin-top: 2em">
-  <app-save-cancel-form-controls
-    [isCancelEnabled]="true"
-    [isSaveAndContinueEnabled]="isSaveAndContinueEnabled()"
-    [isSaveAndExitEnabled]="isSaveAndExitEnabled()"
-    (cancelEvent)= "onCancel()"
-    (saveAndContinueEvent)="onSaveAndContinue()"
-    (saveAndExitEvent)="onSaveAndExit()"
-  ></app-save-cancel-form-controls>
+  <button mat-raised-button (click)="onCancel()">Cancel</button>
+<!--  <app-save-cancel-form-controls-->
+<!--    [isCancelEnabled]="true"-->
+<!--    [isSaveAndContinueEnabled]="isSaveAndContinueEnabled()"-->
+<!--    [isSaveAndExitEnabled]="isSaveAndExitEnabled()"-->
+<!--    (cancelEvent)= "onCancel()"-->
+<!--    (saveAndContinueEvent)="onSaveAndContinue()"-->
+<!--    (saveAndExitEvent)="onSaveAndExit()"-->
+<!--  ></app-save-cancel-form-controls>-->
 </div>
