Added conformation dialog

--- a/src/app/components/create-referral/create-referral.component.html
+++ b/src/app/components/create-referral/create-referral.component.html
@@ -24,7 +24,8 @@
         <!-- Add Patient general information -->
         <mat-step label="Supporting Information" [completed]='isStepCompleted(3)'>
           <div>
-            <app-request-supporting-information></app-request-supporting-information>
+            <app-request-supporting-information>
+            </app-request-supporting-information>
           </div>
         </mat-step>
 
