--- a/src/app/components/service-provider-list/service-provider-list.component.html
+++ b/src/app/components/service-provider-list/service-provider-list.component.html
@@ -10,6 +10,7 @@
 </div>
 
 <div align="end" style="margin-top: 2em">
+  <button mat-raised-button (click)="onSaveAndContinue()" [disabled]="!selectedServiceProvider">Save</button>
   <button mat-raised-button (click)="onCancel()">Cancel</button>
 <!--  <app-save-cancel-form-controls-->
 <!--    [isCancelEnabled]="true"-->
