--- a/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
+++ b/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
@@ -1,5 +1,7 @@
 <!-- TODO In addition to the form functionality we need to extract all the css into classes-->
 <div class="scrollable-container">
+
+  <pre>{{patient| json}}</pre>
   <form [formGroup]="generalInfoServiceTypeForm">
 
     <mat-card>
