--- a/src/app/components/patient-demographics/patient-demographics.component.html
+++ b/src/app/components/patient-demographics/patient-demographics.component.html
@@ -6,27 +6,26 @@ TODO:
 
 <div style="background-color: #0d47a1; color: white;">
   <div class="row container" style="font-size: large; padding-top: 1em;">
-    <div class="col">Burdell, George</div>
+    <div class="col">{{ patient?.name[0]?.family }}, {{ patient?.name[0]?.given[0] }}</div>
   </div>
   <div class="row container" style="padding-top: 1em; padding-bottom: 1em">
     <div class="col">
-      Gender: Male<br/>
-      Marital Status: Single<br/>
-      Date of Birth: 9 July, 2023 <br/>
+      Gender: {{ patient?.gender }}<br/>
+      Marital Status: {{ patient?.maritalStatus}}<br/>
+      Date of Birth: {{ patient?.birthDate }}<br/>
     </div>
     <div class="col">
       Address:<br/>
-      123 Peachtree St NE <br/> Atlanta GA, 30333
+      {{ patient?.address[0]?.use }}<br/>
+      {{ patient?.address[0]?.line[0] }}<br/>
+      {{ patient?.address[0]?.city }} {{ patient?.address[0]?.state }},  {{ patient?.address[0]?.postalCode }}
     </div>
     <div class="col">
-      Phone # (mobile): 404-333-7878 <br/>
-      Phone # (work): 144-333-7878 <br/>
-      email: george.burdell@gatech.edu <br/>
+      Phone # (mobile):<br/>
+      Phone # (work):<br/>
+      email:<br/>
     </div>
-    <div class="col">Preferred Language(s): <br/>
-      English <br/>
-      German
-    </div>
+    <div class="col">Preferred Language(s): </div>
     <div class="col" style="border-style: solid; border-width: thin; padding: 0.5em">Insurance Coverage:
       <br/>
       Aetna<br/>
