Begun populating the form fields with data from the omop server.

--- a/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
+++ b/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
@@ -1,7 +1,7 @@
 <!-- TODO In addition to the form functionality we need to extract all the css into classes-->
 <div class="scrollable-container">
 
-  <pre>{{patient| json}}</pre>
+  <pre>{{usCorePatient| json}}</pre>
   <form [formGroup]="generalInfoServiceTypeForm">
 
     <mat-card>
@@ -58,8 +58,9 @@
               <!-- radio buttons -->
               <mat-radio-group formControlName="raceCategoriesListRadioBtns" class="radio-group">
                 <mat-list-item *ngFor="let raceCategory of fhirConstants.RACE_CATEGORIES.slice(-2)">
-                  <mat-radio-button [value]=raceCategory style="margin-top: 1em; margin-left: 1em"
-                                    (change)="onRaceCategoryRadioBtnChange($event)">
+                  <mat-radio-button
+                    [value]=raceCategory style="margin-top: 1em; margin-left: 1em"
+                    (change)="onRaceCategoryRadioBtnChange($event)">
                     {{raceCategory.display}}
                   </mat-radio-button>
                 </mat-list-item>
@@ -83,7 +84,7 @@
               <mat-radio-group formControlName="ethnicity" class="radio-group">
                 <mat-list-item *ngFor="let ethnicGroup of fhirConstants.ETHNICITY">
                   <mat-radio-button [value]=ethnicGroup style="margin-top: 1em; margin-left: 1em">
-                    {{ethnicGroup}}
+                    {{ethnicGroup.display}}
                   </mat-radio-button>
                 </mat-list-item>
               </mat-radio-group>
