Refactored some of the code for the service providers

--- a/src/app/components/create-referral/create-referral.component.html
+++ b/src/app/components/create-referral/create-referral.component.html
@@ -9,7 +9,8 @@
         <mat-step label="Select Recipient" [completed]='isStepCompleted(1)' >
           <div>
             <app-service-provider-list
-              (savedSuccessEvent)="stepper.next()"
+              (savedSuccessEvent)="onSaveProvider($event)"
+              [referral] = "referral"
             ></app-service-provider-list>
           </div>
         </mat-step>
