--- a/src/app/components/create-referral/create-referral.component.html
+++ b/src/app/components/create-referral/create-referral.component.html
@@ -19,6 +19,7 @@
         <mat-step label="General Information and Service Type" [completed]='isStepCompleted(2)' >
           <app-general-information-and-service-type
             (savedSuccessEvent)="stepper.next()"
+            [referral] = "referral"
           ></app-general-information-and-service-type>
         </mat-step>
 
