--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,3 +47,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   border-color: #eceff1
 }
 
+.row-button-wrapper {
+  margin-top: 1em;
+  display: flex;
+  align-items:center;
+}
+
