Refactored code to use better naming.

--- a/src/app/components/active-referrals/active-referrals.component.html
+++ b/src/app/components/active-referrals/active-referrals.component.html
@@ -3,7 +3,7 @@
   <div class="controls">
     <div style="font-size: large">Active Referrals and Drafts</div>
     <div class="spacer"></div>
-    <button mat-raised-button color="primary" [routerLink]="'/create-referral'">
+    <button mat-raised-button color="primary" [routerLink]="'/referral-manager'">
       <mat-icon>add</mat-icon>Create New Referral
     </button>
   </div>
