fix and constant for profile

--- a/src/app/service-request-tester/service-request-tester.component.html
+++ b/src/app/service-request-tester/service-request-tester.component.html
@@ -25,7 +25,7 @@
     <mat-icon>question_mark</mat-icon> Check Change
   </button>
 
-  <button mat-raised-button (click)="this.serviceRequestHandler.setServiceType(this.currentParameters, 'Diabetes')">
+  <button mat-raised-button (click)="this.serviceRequestHandler.setServiceType(this.currentParameters, 'diabetes-prevention')">
     <mat-icon>x</mat-icon> Set Service Type
   </button>
 
