--- a/src/app/service-request-tester/service-request-tester.component.html
+++ b/src/app/service-request-tester/service-request-tester.component.html
@@ -42,13 +42,13 @@
   <div><h2>Saved Snapshot</h2>
 
     <pre>
-  {{ this.currentSnapshot | json }}
+  {{ this.lastSnapshot | json }}
 </pre>
   </div>
   <div><h2>Saved Param</h2>
 
     <pre>
-  {{ this.currentParameters | json }}
+  {{ this.lastParameters | json }}
 </pre>
   </div>
 </div>
