Added test toggle buttons and provider reg

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
 
     <mat-toolbar style="background-color: #002171; color: white">
       <span style="cursor: pointer"  [routerLink]="'/'">BSeR Referral Manager</span>
+      <span> | (ADD SPACER HERE) | </span>
+      <button mat-raised-button  [routerLink]="'/servicerequesttest'">TEST SERVICE REQUEST</button>
+      <button mat-raised-button  [routerLink]="'/register'">Register Service Provider</button>
     </mat-toolbar>
 
     <app-patient-demographics></app-patient-demographics>
