--- a/src/app/components/active-referrals/active-referrals.component.html
+++ b/src/app/components/active-referrals/active-referrals.component.html
@@ -1,42 +1,64 @@
 <div class="container top-spacer">
-
   <div class="controls">
     <div style="font-size: large">Active Referrals and Drafts</div>
     <div class="spacer"></div>
     <button mat-raised-button color="primary" [routerLink]="'/referral-manager'">
-      <mat-icon>add</mat-icon>Create New Referral
+      <mat-icon>add</mat-icon>
+      Create New Referral
     </button>
   </div>
 
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <mat-tab-group class="mat-elevation-z4">
+    <mat-tab label="Draft">
 
-    <ng-container matColumnDef="service">
-      <th mat-header-cell *matHeaderCellDef> Service </th>
-      <td mat-cell *matCellDef="let element"> {{element.service}} </td>
-    </ng-container>
+      <table mat-table [dataSource]="dataSource" style="margin-top: 1.5em">
 
-    <ng-container matColumnDef="serviceProvider">
-      <th mat-header-cell *matHeaderCellDef> Service Provider </th>
-      <td mat-cell *matCellDef="let element"> {{element.serviceProvider}} </td>
-    </ng-container>
+        <ng-container matColumnDef="service">
+          <th mat-header-cell *matHeaderCellDef> Service</th>
+          <td mat-cell *matCellDef="let element"> {{element.service}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Status </th>
-      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-    </ng-container>
+        <ng-container matColumnDef="serviceProvider">
+          <th mat-header-cell *matHeaderCellDef> Service Provider</th>
+          <td mat-cell *matCellDef="let element"> {{element.serviceProvider}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="dateCreated">
-      <th mat-header-cell *matHeaderCellDef> Date Created </th>
-      <td mat-cell *matCellDef="let element"> {{element.dateCreated}} </td>
-    </ng-container>
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef> Status</th>
+          <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="lastUpdated">
-      <th mat-header-cell *matHeaderCellDef> Last Updated </th>
-      <td mat-cell *matCellDef="let element"> {{element.lastUpdated}} </td>
-    </ng-container>
+        <ng-container matColumnDef="dateCreated">
+          <th mat-header-cell *matHeaderCellDef> Date Created</th>
+          <td mat-cell *matCellDef="let element"> {{element.dateCreated}} </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+        <ng-container matColumnDef="lastUpdated">
+          <th mat-header-cell *matHeaderCellDef> Last Updated</th>
+          <td mat-cell *matCellDef="let element"> {{element.lastUpdated}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        <ng-container>
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" [attr.colspan]="displayedColumns.length">
+              This patient does not draft referrals.
+            </td>
+          </tr>
+        </ng-container>
+
+      </table>
+    </mat-tab>
+
+    <mat-tab label="Active">
+    <!--TODO Replace this with a table. Maybe add to a component?-->
+      <div style="margin: 1em">
+        This patient does not active referrals.
+      </div>
+    </mat-tab>
+
+  </mat-tab-group>
 
 </div>
