--- a/src/app/components/service-provider-list/service-provider-list.component.html
+++ b/src/app/components/service-provider-list/service-provider-list.component.html
@@ -20,6 +20,8 @@
       </app-service-provider>
     </div>
   </div>
+
+  <pre>{{serviceProviders | json}}</pre>
 </div>
 
 <div class="row-button-wrapper">
