--- a/src/app/components/patient-demographics/patient-demographics.component.html
+++ b/src/app/components/patient-demographics/patient-demographics.component.html
@@ -16,14 +16,14 @@ TODO:
     </div>
     <div class="col">
       Address:<br/>
-      {{ patient?.address[0]?.use }}<br/>
+      <span *ngIf="patient?.address[0]?.use">{{ patient?.address[0]?.use }}<br/></span>
       {{ patient?.address[0]?.line[0] }}<br/>
       {{ patient?.address[0]?.city }} {{ patient?.address[0]?.state }},  {{ patient?.address[0]?.postalCode }}
     </div>
-    <div class="col">
-      Phone # (mobile):<br/>
-      Phone # (work):<br/>
-      email:<br/>
+    <div class="col">Telecom:
+      <div *ngFor="let phone of patient?.telecom">
+      {{phone.use}}: {{phone.value}}<br/>
+      </div>
     </div>
     <div class="col">Preferred Language(s): </div>
     <div class="col" style="border-style: solid; border-width: thin; padding: 0.5em">Insurance Coverage:
