--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -1,1 +1,25 @@
-<p>registration works!</p>
+<div class="container top-spacer">
+  <div class="flex-row">
+    <div class="flex-cell">
+      <span  style="font-size: large">Registered Service Providers</span>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+        <ng-container matColumnDef="practitioner">
+          <th mat-header-cell *matHeaderCellDef> Practitioner </th>
+          <td mat-cell *matCellDef="let element"> {{element.practitioner}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="organization">
+          <th mat-header-cell *matHeaderCellDef> Organization </th>
+          <td mat-cell *matCellDef="let element"> {{element.organization}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+    <div class="flex-cell">
+      <span style="font-size: large">Create Service Provider</span>
+    </div>
+  </div>
+</div>
