Service request handler get the patient from the client.

--- a/src/app/components/referral-manager/referral-manager.component.html
+++ b/src/app/components/referral-manager/referral-manager.component.html
@@ -32,6 +32,10 @@
         </mat-step>
 
       </mat-stepper>
+
+
+      Referral <pre> {{ referral | json }}</pre>
+
     </mat-card-content>
 
   </mat-card>
