Committing updates to create referral

--- a/src/app/components/referral-manager/referral-manager.component.html
+++ b/src/app/components/referral-manager/referral-manager.component.html
@@ -10,7 +10,7 @@
           <div>
             <app-service-provider-list
               (savedSuccessEvent)="onSaveProvider($event)"
-              [referral] = "referral"
+              [referral]="currentSnapshot"
             ></app-service-provider-list>
           </div>
         </mat-step>
